--- a/TranspoLink/Views/Account/UpdateProfile.cshtml
+++ b/TranspoLink/Views/Account/UpdateProfile.cshtml
@@ -1,13 +1,13 @@
 ﻿@model UpdateProfileVM
 
 @{
-    ViewBag.Title = "Account | My Profile";
+    ViewBag.Title += " | My Profile";
 }
 
 @section head {
     <!-- Using your existing CSS files -->
-    <link rel="stylesheet" href="/css/member.css" asp-append-version="true" />
-    <link rel="stylesheet" href="/css/photo-tools.css" asp-append-version="true" />
+    <link rel="stylesheet" href="/css/member.css" asp-append-version="true"/>
+    <link rel="stylesheet" href="/css/photo-tools.css" asp-append-version="true"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.js"></script>
     <script src="/js/photo-tools.js" defer></script>
     <script src="/js/user.js" defer></script>
