--- a/TranspoLink/Views/Account/ForgotPassword.cshtml
+++ b/TranspoLink/Views/Account/ForgotPassword.cshtml
@@ -1,6 +1,6 @@
 ﻿@model ForgotPasswordVM
 @{
-    ViewBag.Title = "Account | Forgot Password";
+    ViewBag.Title += " | Forgot Password";
 }
 
 @section head {
