--- a/TranspoLink/Views/Shared/_Layout.cshtml
+++ b/TranspoLink/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
                     </div>
 
                     <div class="dropdown-actions">
-                        <a href="/Account/UpdateProfile" class="dropdown-btn btn-manage">Manage Account</a>
+                        <a href="/Account/ProfileManage" class="dropdown-btn btn-manage">Manage Account</a>
                         <a href="/Account/Logout" class="dropdown-btn btn-logout">Log Out</a>
                     </div>
                 </div>
